Prevent horizontal scrollbar during card animation

--- a/LESS/index.less
+++ b/LESS/index.less
@@ -16,6 +16,7 @@ body {
   background-color: @lambda-times-color-background;
   color: @lambda-times-color-primary;
   font-family: 'PT Sans', sans-serif;
+  overflow-x: hidden;
 }
 
 @import '../components/TopBar/TopBar.less';
